RESOLVED FIXED44138
Crash beneath SocketStreamHandle::readStreamCallback when running WebSocket tests
https://bugs.webkit.org/show_bug.cgi?id=44138
Summary Crash beneath SocketStreamHandle::readStreamCallback when running WebSocket t...
Adam Roben (:aroben)
Reported 2010-08-17 16:09:32 PDT
The bots are crashing when running websocket/tests/workers/worker-handshake-challenge-randomness.html. The crash logs say we're crashing beneath SocketStreamHandle::readStreamCallback at some unknown address (see <http://build.webkit.org/results/Windows%20Release%20(Tests)/r65540%20(2834)/CrashLog_0c18_2010-08-17_15-59-51-702.txt>).
Attachments
proposed fix (5.24 KB, patch)
2011-03-14 14:43 PDT, Alexey Proskuryakov
no flags
Adam Roben (:aroben)
Comment 1 2010-08-17 16:10:51 PDT
Adam Roben (:aroben)
Comment 2 2011-02-28 08:00:48 PST
See also bug 55375.
Alexey Proskuryakov
Comment 3 2011-03-14 14:43:37 PDT
Created attachment 85723 [details] proposed fix
Alexey Proskuryakov
Comment 4 2011-03-14 14:44:13 PDT
*** Bug 55375 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2011-03-14 14:44:38 PDT
*** Bug 56185 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 6 2011-03-14 22:48:29 PDT
Comment on attachment 85723 [details] proposed fix Clearing flags on attachment: 85723 Committed r81111: <http://trac.webkit.org/changeset/81111>
WebKit Commit Bot
Comment 7 2011-03-14 22:48:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.